--- a/project3/index1.html
+++ b/project3/index1.html
@@ -22,7 +22,7 @@
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email" name="emailID" required>
+          <input type="email" id="email" name="emailID" required>
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
