--- a/project3/index1.html
+++ b/project3/index1.html
@@ -18,17 +18,17 @@
         <div class="msg"></div>
         <div>
           <label for="name">Name:</label>
-          <input type="text" id="name" name="userName" required>
+          <input type="text" id="name" name="userName" >
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="email" id="email" name="emailID" required>
+          <input type="email" id="email" name="emailID" >
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
-
+      <!-- <ul id="users"></ul> -->
+      <ul id = "userDetails"></ul>
       <!-- <ul class="items">
         <li class="item">Item 1</li>
         <li class="item">Item 2</li>
