some js functions are added

--- a/project4/index.html
+++ b/project4/index.html
@@ -11,6 +11,10 @@
     <!-- <script src="settimeout.js"></script> -->
     <!-- <script src="block_shadowing.js"></script> -->
     <!-- <script src="closures.js"></script> -->
-    <script src="currying.js"></script>
+    <!-- <script src="currying.js"></script> -->
+    <!-- <script src="advanceClosure.js"></script> -->
+    <!-- <script src="function.js"></script> -->
+    <!-- <script src="this.js"></script> -->
+    <script src="fatArrow.js"></script>
 </body>
 </html>
