expense tracker app is made

--- a/project4/index.html
+++ b/project4/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello JavaScript!</h1>
+    <button id="clickme">Click Me</button>
     <!-- <script src="settimeout.js"></script> -->
     <!-- <script src="block_shadowing.js"></script> -->
     <!-- <script src="closures.js"></script> -->
@@ -15,6 +16,8 @@
     <!-- <script src="advanceClosure.js"></script> -->
     <!-- <script src="function.js"></script> -->
     <!-- <script src="this.js"></script> -->
-    <script src="fatArrow.js"></script>
+    <!-- <script src="fatArrow.js"></script> -->
+    <script src="callback.js"></script>
+    <script src="eventloop.js"></script>
 </body>
 </html>
