--- a/project4/index.html
+++ b/project4/index.html
@@ -17,7 +17,9 @@
     <!-- <script src="function.js"></script> -->
     <!-- <script src="this.js"></script> -->
     <!-- <script src="fatArrow.js"></script> -->
-    <script src="callback.js"></script>
-    <script src="eventloop.js"></script>
+    <!-- <script src="callback.js"></script> -->
+    <!-- <script src="eventloop.js"></script> -->
+    <!-- <script src="stack.js"></script> -->
+    <script src="queue.js"></script>
 </body>
 </html>
