lets make promise file is updated

--- a/Async_javascript/index.html
+++ b/Async_javascript/index.html
@@ -9,6 +9,9 @@
 <body>
     
 
-    <script src="callbacks.js"></script>
+    <!-- <script src="callbacks.js"></script> -->
+    <script src="promises.js"></script>
+    <!-- <script src="asyncAwait.js"></script> -->
+    <!-- <script src="practice.js"></script> -->
 </body>
 </html>
