--- a/project4/index.html
+++ b/project4/index.html
@@ -20,6 +20,7 @@
     <!-- <script src="callback.js"></script> -->
     <!-- <script src="eventloop.js"></script> -->
     <!-- <script src="stack.js"></script> -->
-    <script src="queue.js"></script>
+    <!-- <script src="queue.js"></script> -->
+    <script src="promises.js"></script>
 </body>
 </html>
