async await(random.js) file is added

--- a/Async_javascript/index.html
+++ b/Async_javascript/index.html
@@ -10,8 +10,9 @@
     
 
     <!-- <script src="callbacks.js"></script> -->
-    <script src="promises.js"></script>
+    <!-- <script src="promises.js"></script> -->
     <!-- <script src="asyncAwait.js"></script> -->
     <!-- <script src="practice.js"></script> -->
+    <script src="random.js"></script>
 </body>
 </html>
