--- a/Async_javascript/index.html
+++ b/Async_javascript/index.html
@@ -10,9 +10,10 @@
     
 
     <!-- <script src="callbacks.js"></script> -->
-    <!-- <script src="promises.js"></script> -->
+    <script src="promises.js"></script>
     <!-- <script src="asyncAwait.js"></script> -->
     <!-- <script src="practice.js"></script> -->
-    <script src="random.js"></script>
+    <!-- <script src="random.js"></script> -->
+    
 </body>
 </html>
