DOM folder is added

--- a/project4/index.html
+++ b/project4/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="eventloop.js"></script> -->
     <!-- <script src="stack.js"></script> -->
     <!-- <script src="queue.js"></script> -->
-    <script src="promises.js"></script>
+    <!-- <script src="promises.js"></script> -->
+    <script src="exercise.js"></script>
 </body>
 </html>
