--- a/Async_javascript/index.html
+++ b/Async_javascript/index.html
@@ -11,10 +11,10 @@
 
     <!-- <script src="callbacks.js"></script> -->
     <!-- <script src="promises.js"></script> -->
-    <!-- <script src="asyncAwait.js"></script> -->
+    <script src="asyncAwait.js"></script>
     <!-- <script src="practice.js"></script> -->
     <!-- <script src="random.js"></script> -->
-    <script src="practice1.js"></script>
+    <!-- <script src="practice1.js"></script> -->
     
 </body>
 </html>
